--- a/FontFace_load.html
+++ b/FontFace_load.html
@@ -3,6 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>FontFace#load() - CSS Font Loading Module Level 3</title>
+  <style>
+    .lorem {
+      font-size: 2em;
+    }
+  </style>
+
   <script>
     if(document.fonts){
 
@@ -24,7 +30,7 @@
 </head>
 <body>
   <article>
-    <h1>Events - CSS Font Loading Module Level 3</h1>
+    <h1>FontFace#load() - CSS Font Loading Module Level 3</h1>
     <div class="lorem">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
