--- a/FontFaceSet_load.html
+++ b/FontFaceSet_load.html
@@ -32,6 +32,11 @@
       cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
       proident, sunt in culpa qui officia deserunt mollit anim id est laborum.  
     </div>
+    <pre>
+document.fonts.load("1em Lobster").then(function (loadedFace) {
+  document.querySelector(".lorem").style.fontFamily = "Lobster, serif";
+});      
+    </pre>
   </article>
 </body>
 </html>
