--- a/FontFaceSet_ready.html
+++ b/FontFaceSet_ready.html
@@ -27,6 +27,11 @@
       cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
       proident, sunt in culpa qui officia deserunt mollit anim id est laborum.  
     </div>
+    <pre>
+document.fonts.ready().then(function(fontFaceSet) {
+  console.log("document.fonts.ready()")
+});
+    </pre>
   </article>
 </body>
 </html>
