--- a/canvas_webfonts.html
+++ b/canvas_webfonts.html
@@ -22,5 +22,14 @@
 </head>
 <body>
   <canvas id="canvas-area" width="800" height="250"></canvas>
+  <pre>
+var drawText = function(){
+  var ctx = document.querySelector("#canvas-area").getContext("2d");
+  ctx.fillStyle    = "red";
+  ctx.font         = "72px Monofett, sans-serif";
+  ctx.fillText("I love WebFonts", 100 , 100);
+};
+document.fonts.load("72px Monofett, sans-serif").then(drawText);    
+  </pre>
 </body>
 </html>
