--- a/FontFaceSet_check.html
+++ b/FontFaceSet_check.html
@@ -15,7 +15,7 @@
 
       console.log(document.fonts.check("2em Lobster")); // => false
 
-      document.fonts.ready().then(function(fontFaceSet) {
+      document.fonts.ready.then(function(fontFaceSet) {
         console.log(fontFaceSet.check("2em Lobster")); // => true
       });
 
@@ -33,12 +33,12 @@
       quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
       consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
       cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.  
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </div>
     <pre>
 console.log(document.fonts.check("2em Lobster")); // => false
 
-document.fonts.ready().then(function(fontFaceSet) {
+document.fonts.ready.then(function(fontFaceSet) {
   console.log(fontFaceSet.check("2em Lobster")); // => true
 });
     </pre>
