--- a/FontFaceSet_ready.html
+++ b/FontFaceSet_ready.html
@@ -11,24 +11,24 @@
     }
   </style>
   <script>
-    document.fonts.ready().then(function(fontFaceSet) {
+    document.fonts.ready.then(function() {
       console.log("document.fonts.ready()")
     });
   </script>
 </head>
 <body>
   <article>
-    <h1>FontFaceSet#ready() - CSS Font Loading Module Level 3</h1>
+    <h1>FontFaceSet#ready - CSS Font Loading Module Level 3</h1>
     <div class="lorem">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
       quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
       consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
       cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.  
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </div>
     <pre>
-document.fonts.ready().then(function(fontFaceSet) {
+document.fonts.ready.then(function(fontFaceSet) {
   console.log("document.fonts.ready()")
 });
     </pre>
